<resources>
    <string name="app_name" translatable="false">Best Meal</string>
    <string name="app_goal">Personal MasterChef</string>
    <string name="admob_banner_ad_unit_number_key" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_app_number" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="settings_classification_label_newest">by creation date</string>
    <string name="settings_classification_label_liked">by likes</string>
    <string name="settings_classification_label_disliked">by dislikes</string>
    <string name="settings_classification_label_approved">by approvals</string>
    <string name="settings_classification_label_reproved">by reprovals</string>
    <string name="settings_classification_label_shared">by sharings</string>
    <string name="settings_classification_label_printed">by printings</string>
    <string name="settings_classification_label_visualized">by visualizations</string>
    <string name="settings_classification_value_newest" translatable="false">creation_date</string>
    <string name="settings_classification_value_liked" translatable="false">number_likes</string>
    <string name="settings_classification_value_disliked" translatable="false">number_dislikes</string>
    <string name="settings_classification_value_approved" translatable="false">number_approvals</string>
    <string name="settings_classification_value_reproved" translatable="false">number_reprovals</string>
    <string name="settings_classification_value_shared" translatable="false">number_sharings</string>
    <string name="settings_classification_value_printed" translatable="false">number_printings</string>
    <string name="settings_classification_value_visualized" translatable="false">number_visualizations</string>
    <string name="settings_classification_key" translatable="false">classification</string>
    <string name="settings_classification_label">Classification</string>
    <string name="settings_servings_label_low">low</string>
    <string name="settings_servings_label_medium">medium</string>
    <string name="settings_servings_label_high">high</string>
    <string name="settings_servings_label_all">all</string>
    <string name="settings_servings_value_low" translatable="false">servings_low</string>
    <string name="settings_servings_value_medium" translatable="false">servings_medium</string>
    <string name="settings_servings_value_high" translatable="false">servings_high</string>
    <string name="settings_servings_value_all" translatable="false">servings_all</string>
    <string name="settings_servings_key" translatable="false">servings</string>
    <string name="settings_servings_label">Servings</string>
    <string name="settings_difficult_label_low">low</string>
    <string name="settings_difficult_label_medium">medium</string>
    <string name="settings_difficult_label_high">high</string>
    <string name="settings_difficult_label_all">all</string>
    <string name="settings_difficult_value_low" translatable="false">difficult_low</string>
    <string name="settings_difficult_value_medium" translatable="false">difficult_medium</string>
    <string name="settings_difficult_value_high" translatable="false">difficult_high</string>
    <string name="settings_difficult_value_all" translatable="false">difficult_all</string>
    <string name="settings_difficult_key" translatable="false">difficult</string>
    <string name="settings_difficult_label">Difficult</string>
    <string name="settings_price_label_low">low</string>
    <string name="settings_price_label_medium">medium</string>
    <string name="settings_price_label_high">high</string>
    <string name="settings_price_label_all">all</string>
    <string name="settings_price_value_low" translatable="false">price_low</string>
    <string name="settings_price_value_medium" translatable="false">price_medium</string>
    <string name="settings_price_value_high" translatable="false">price_high</string>
    <string name="settings_price_value_all" translatable="false">price_all</string>
    <string name="settings_price_key" translatable="false">price</string>
    <string name="settings_price_label">Price</string>
    <string name="settings_time_label_low">low</string>
    <string name="settings_time_label_medium">medium</string>
    <string name="settings_time_label_high">high</string>
    <string name="settings_time_label_all">all</string>
    <string name="settings_time_value_low" translatable="false">time_low</string>
    <string name="settings_time_value_medium" translatable="false">time_medium</string>
    <string name="settings_time_value_high" translatable="false">time_high</string>
    <string name="settings_time_value_all" translatable="false">time_all</string>
    <string name="settings_time_key" translatable="false">time</string>
    <string name="settings_time_label">Time</string>
    <string name="settings_language_label_english">english</string>
    <string name="settings_language_label_portuguese">portuguese</string>
    <string name="settings_language_label_spanish">spanish</string>
    <string name="settings_language_value_english" translatable="false">English</string>
    <string name="settings_language_value_portuguese" translatable="false">Portuguese</string>
    <string name="settings_language_value_spanish" translatable="false">Spanish</string>
    <string name="settings_language_key" translatable="false">language</string>
    <string name="settings_language_label">Language</string>
    <string name="settings_purchase_items_key" translatable="false">purchase_items</string>
    <string name="settings_purchase_items_label" translatable="false">purchase items</string>
    <string name="hint_email">Enter your email address</string>
    <string name="hint_old_email">Enter your old email</string>
    <string name="hint_new_email">Enter your new email</string>
    <string name="hint_password">Enter your password code</string>
    <string name="hint_old_password">Enter your old password</string>
    <string name="hint_new_password">Enter your new password</string>
    <string name="hint_enter_name_of_recipe">Enter name of recipe</string>
    <string name="hint_enter_ingredient_name">Enter ingredient name</string>
    <string name="hint_enter_ingredient_amount">Enter ingredient amount</string>
    <string name="hint_enter_ingredient_unit">Enter ingredient unit</string>
    <string name="content_description_app_icon" translatable="false">app icon</string>
    <string name="content_description_app_name" translatable="false">app name</string>
    <string name="content_description_app_message" translatable="false">app message</string>
    <string name="content_description_app_task" translatable="false">app task</string>
    <string name="content_description_button_dislike" translatable="false">button dislike</string>
    <string name="content_description_button_like" translatable="false">button like</string>
    <string name="content_description_button_approve" translatable="false">button approve</string>
    <string name="content_description_button_delete" translatable="false">button delete</string>
    <string name="content_description_button_reprove" translatable="false">button reprove</string>
    <string name="content_description_button_share" translatable="false">button share</string>
    <string name="content_description_button_print" translatable="false">button print</string>
    <string name="content_description_button_edit" translatable="false">button edit</string>
    <string name="content_description_button_comment" translatable="false">button comment</string>
    <string name="content_description_recipe_time_icon" translatable="false">recipe time icon</string>
    <string name="content_description_purchase_list_icon" translatable="false">purchase list icon</string>
    <string name="content_description_recipe_servings_icon" translatable="false">recipe servings icon</string>
    <string name="content_description_recipe_price_icon" translatable="false">recipe price icon</string>
    <string name="content_description_recipe_difficult_icon" translatable="false">recipe difficult icon</string>
    <string name="content_description_recipe_photo" translatable="false">recipe photo</string>
    <string name="content_description_ingredient_amount" translatable="false">ingredient amount</string>
    <string name="content_description_ingredient_unit" translatable="false">ingredient unit</string>
    <string name="content_description_ingredient_photo" translatable="false">ingredient photo</string>
    <string name="content_description_hands_off" translatable="false">hands off</string>
    <string name="content_description_test" translatable="false">button visibility</string>
    <string name="label_widget_launch_best_meal">Launch Best Meal</string>
    <string name="label_widget_purchase" translatable="false">%1$s</string>
    <string name="label_comments">Comments</string>
    <string name="label_header">Header</string>
    <string name="label_ingredients">Ingredients</string>
    <string name="label_instructions">Instructions</string>
    <string name="label_nutritional">Nutritional</string>
    <string name="label_tips">Tips</string>
    <string name="label_statistics">Statistics</string>
    <string name="label_widget_items_purchase">Items to be purchased</string>
    <string name="label_widget_create">Create widget"</string>
    <string name="label_widget_configuration">Widget configurations"</string>
    <string name="label_authorization">Authorization</string>
    <string name="label_terms_of_use">Terms of use</string>
    <string name="label_about_us">About us</string>
    <string name="label_help">Help</string>
    <string name="label_login">LogIn</string>
    <string name="label_logout">LogOut</string>
    <string name="label_signIn">SigIn</string>
    <string name="label_signOut">SignOut</string>
    <string name="label_changePassword">Change Password</string>
    <string name="label_changeEmail">Change Email</string>
    <string name="label_settings">Settings</string>
    <string name="label_information">Information</string>
    <string name="label_user_agreement">"User agreement"</string>
    <string name="label_user_warning" translatable="false">"User warning"</string>
    <string name="label_best">Best</string>
    <string name="label_all">All</string>
    <string name="label_visualized">Visualized</string>
    <string name="label_printed">Printed</string>
    <string name="label_commented">Commented</string>
    <string name="label_shared">Shared</string>
    <string name="label_change">Change</string>
    <string name="label_home">Home</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_reset">Reset</string>
    <string name="label_refuse">Refuse</string>
    <string name="label_accept">Accept</string>
    <string name="label_created_on">Created on</string>
    <string name="label_diet">Diet</string>
    <string name="label_type">Type</string>
    <string name="label_cuisine">Cuisine</string>
    <string name="label_intolerance">Intolerance</string>
    <string name="label_occasion">Occasion</string>
    <string name="label_best_meal_error">BestMeal Error</string>
    <string name="label_menu">menu</string>
    <string name="label_list">List</string>
    <string name="label_detail">Detail</string>
    <string name="label_approved">Approved</string>
    <string name="label_reproved">Reproved</string>
    <string name="label_liked">Liked</string>
    <string name="label_disliked">Disliked</string>
    <string name="label_book">Book</string>
    <string name="label_purchase">Purchases</string>
    <string name="label_signout">SignOut</string>
    <string name="label_change_email">Change Email</string>
    <string name="label_change_password">Change Password</string>
    <string name="layout_fake_value_10" translatable="false">12345</string>
</resources>