<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/back"
        android:icon="@drawable/ic_button_back_white_24dp"
        android:title=""
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_button_home_white_24dp"
        android:title=""
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/purchaseList"
        android:icon="@drawable/ic_recipe_purchase_list_white_24dp"
        android:title=""
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/settings"
        android:title="@string/label_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/logout"
        android:title="@string/label_logout"
        app:showAsAction="never" />
    <item
        android:id="@+id/reset_password"
        android:title="@string/label_reset"
        app:showAsAction="never" />

    <item
        android:id="@+id/change_email"
        android:title="@string/label_change_email"
        app:showAsAction="never" />

    <item
        android:id="@+id/change_password"
        android:title="@string/label_change_password"
        app:showAsAction="never" />

    <item
        android:id="@+id/signout"
        android:title="@string/label_signout"
        app:showAsAction="never" />

    <item
        android:id="@+id/help"
        android:title="@string/label_help"
        app:showAsAction="never" />

    <item
        android:id="@+id/terms"
        android:title="@string/label_terms_of_use"
        app:showAsAction="never" />

    <item
        android:id="@+id/about_us"
        android:title="@string/label_about_us"
        app:showAsAction="never" />

</menu>
