<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayoutVerticalFirst"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/best_meal_margin_default"
    android:background="@color/colorWhite"
    android:gravity="bottom"
    android:orientation="horizontal"
    android:padding="@dimen/best_meal_margin_default"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/imageView"
        style="@style/best_meal_app_icon_captaincy"
        android:contentDescription="@string/content_description_app_icon"
        app:srcCompat="@mipmap/ic_launcher_foreground" />

    <LinearLayout
        android:id="@+id/linearLayoutVerticalSecond"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewAppName"
            style="@style/best_meal_app_name_captaincy"
            android:text="@string/app_name" />

        <TextView
            android:id="@+id/textViewAppGoal"
            style="@style/best_meal_app_goal_captaincy"
            android:text="@string/app_goal" />

    </LinearLayout>

</LinearLayout>
